==> jrpbsgq6wm-dot/hxb/svs/源码/20260210/app_code/APP/TDC_GP22/tdc_gp22.c <==
#include <stdlib.h>
#include <string.h>
#include "stdio.h"
#include "main.h"
#include "spi.h"
#include "delay.h"
#include "tdc_gp22.h"
#include "math.h"
#include "exti.h"
#include "serial.h"
#include "stdlib.h"
#include "stmflash.h"
#include "usart1.h"
#include "timer.h"

void gp22_parameter_set(void)
{   
    Source_distance = 3.0;
    outliers_threshold = 10.0;
    memcpy(&svca,Sound_velocity_coe_def,sizeof(Sound_velocity_coe_def));
    memcpy(&scs,Sound_coe_scope_def,sizeof(Sound_coe_scope_def));
    uint16_t tempBuf[2]  = {0};
    uint32_t temp_value = 0;  
    uint32_t i = 0;
    float coe_buf[6] = {0.0f};
    float scope_buf[6] = {0.0f};
    
    //读取flash中的距离
    STMFLASH_Read(PROBE_DISTANCE_ADDR,(u16 *)tempBuf,2); 
    temp_value = tempBuf[1];
    temp_value <<= 16;
    temp_value += tempBuf[0];
    Source_distance =  *(float*)&temp_value;
    memset(tempBuf,0,sizeof(tempBuf));
    
    //读取flash中的默认阈值
    STMFLASH_Read(OUTLIERS_THRESHOLD_ADDR,(u16 *)tempBuf,2);
    temp_value = tempBuf[1];
    temp_value <<= 16;
    temp_value += tempBuf[0];
    outliers_threshold = *(uint32_t*)&temp_value;
    memset(tempBuf,0,sizeof(tempBuf));
    
    
    //读取flash中的默认系数
    for(i=0;i<SOUND_COE_SIZE;i++){
        STMFLASH_Read((SOUND_VELOCITY_COE_A1_ADDR+i*4),(u16 *)tempBuf,2);
        temp_value = tempBuf[1];
        temp_value <<= 16;
        temp_value += tempBuf[0];
        coe_buf[i] = *(float*)&temp_value;
        if(coe_buf[i] == Sound_velocity_coe_def[i]){
            sound_pri_flag++;
        }
    }
    memcpy(&svca,coe_buf,sizeof(coe_buf));
    
    //读取flash中的应用系数范围
    for(i=0;i<6;i++){
        STMFLASH_Read(COE_USE_A1_B1_UL + (i*4),(u16 *)tempBuf,2);
        temp_value = tempBuf[1];
        temp_value <<= 16;
        temp_value += tempBuf[0];
        scope_buf[i] = *(float*)&temp_value;
    }
    memcpy(&scs,scope_buf,sizeof(scs));
   
    
}

void TDC_GP22_Init(void){
    GPIO_InitTypeDef GPIO_InitStructure;
    
	GPIO_InitStructure.GPIO_Pin = GPIO_Pin_4;  //tdc spi cs 
 	GPIO_InitStructure.GPIO_Mode = GPIO_Mode_Out_PP;  
    GPIO_InitStructure.GPIO_Speed = GPIO_Speed_50MHz;
 	GPIO_Init(GPIOA, &GPIO_InitStructure);
 	GPIO_SetBits(GPIOA,GPIO_Pin_4);
    
    
    GPIO_InitStructure.GPIO_Pin = GPIO_Pin_1;  //tdc rest
 	GPIO_InitStructure.GPIO_Mode = GPIO_Mode_Out_PP;  
    GPIO_InitStructure.GPIO_Speed = GPIO_Speed_50MHz;
 	GPIO_Init(GPIOA, &GPIO_InitStructure);
 	GPIO_SetBits(GPIOA,GPIO_Pin_1);
/*   
    GPIO_InitStructure.GPIO_Pin = GPIO_Pin_2;  //tdc FIRE_IN
 	GPIO_InitStructure.GPIO_Mode = GPIO_Mode_Out_PP;  
    GPIO_InitStructure.GPIO_Speed = GPIO_Speed_50MHz;
 	GPIO_Init(GPIOA, &GPIO_InitStructure);
 	GPIO_SetBits(GPIOA,GPIO_Pin_2);
*/   
    GPIO_InitStructure.GPIO_Pin = GPIO_Pin_3;  //tdc TDC_EN_START
 	GPIO_InitStructure.GPIO_Mode = GPIO_Mode_Out_PP;  
    GPIO_InitStructure.GPIO_Speed = GPIO_Speed_50MHz;
 	GPIO_Init(GPIOA, &GPIO_InitStructure);
 	GPIO_SetBits(GPIOA,GPIO_Pin_3);
     
    SPIx_Init();
  
    //Test_spi();
}

uint32_t read_tdc_frist_v(void){
    int16_t max_v = 35,temp = 0;
    uint32_t reg4 = 0x20000004;
    STMFLASH_Read(FRIST_WAVE_VOLTAGE,(u16*)&first_v,1);
    
    if(first_v > 35 || first_v < 0){    //def
        first_v = 0x05;
        return reg4 |= (first_v << 8);
    }else{
		if(first_v >= 20){                      //20+mv
			reg4 |= (0x01<<14);
			temp = max_v - first_v;
			if( temp == 15) //20mv
				return reg4;        
			reg4 |= ((0xf-temp)<<8);
			return reg4;
		}else if(first_v > 15 && first_v < 20){  //15-20mv
				//16 20-4 0101 1100
				//17 20-3 0101 1101
				//18 20-2 0101 1110
				//19 20-1 0101 1111
			switch(first_v){
				case 16:
					reg4 |= 0x5C << 8;
					break;
				case 17:
					reg4 |= 0x5D << 8;
					break;
				case 18:
					reg4 |= 0x5E << 8;
					break;
				case 19:
					reg4 |= 0x5F << 8;
					break;
			}
			return reg4;
		}else if(first_v >= 0 && first_v <= 15){    //0-15mv
			reg4 |= (first_v << 8);
			return reg4;
		}else{
			return reg4;
		}
	}
}

float sound_coe_handle(float sound_after_filter){
    float CRITICAL = 1.0f;  //距离声速范围边界临界值
    uint8_t SEGMENT = 100;  //临界点到范围边界的段数
    float temp = 0.0f,segment_temp = 0.0f;
	if(sound_after_filter == 0.0f){
		return 0.0f;
	}
    if((sound_after_filter >= scs.Sound_coe_scope_A1_B1_LL) && (sound_after_filter <= scs.Sound_coe_scope_A1_B1_HL)){   //系数1应用
        if(sound_after_filter >= scs.Sound_coe_scope_A1_B1_HL - CRITICAL){  //如果当前声速需要切换声速范围上限前1米 就需要准备开始切换声速系数   
            segment_temp = find_segment(sound_after_filter/*value*/,scs.Sound_coe_scope_A1_B1_HL - CRITICAL/*start*/,scs.Sound_coe_scope_A1_B1_HL/*end*/,SEGMENT/*segment*/);   //eg 1349-1350
            smooth.target_coe_a = svca.Sound_velocity_coefficient_A2;       //目标系数
            smooth.target_coe_b = svca.Sound_velocity_coefficient_B2;
            smooth.alpha_a = (smooth.target_coe_a - svca.Sound_velocity_coefficient_A1)/2;  //需要切换的系数差值
            smooth.alpha_b = (smooth.target_coe_b - svca.Sound_velocity_coefficient_B1)/2;
            smooth.current_coe_a = svca.Sound_velocity_coefficient_A1 + ( segment_temp * smooth.alpha_a / SEGMENT);
            smooth.current_coe_b = svca.Sound_velocity_coefficient_B1 + ( segment_temp * smooth.alpha_b / SEGMENT);
        }else{  //其他情况
            smooth.current_coe_a = svca.Sound_velocity_coefficient_A1;
            smooth.current_coe_b = svca.Sound_velocity_coefficient_B1;
        }
    }else if((sound_after_filter > scs.Sound_coe_scope_A2_B2_LL) && (sound_after_filter <= scs.Sound_coe_scope_A2_B2_HL)){      //系数2应用
        if(sound_after_filter <= scs.Sound_coe_scope_A2_B2_LL + CRITICAL){      
            segment_temp = find_segment(sound_after_filter/*value*/,scs.Sound_coe_scope_A2_B2_LL/*start*/,scs.Sound_coe_scope_A2_B2_LL+CRITICAL/*end*/,SEGMENT/*segment*/);   //eg 1350-1351
            smooth.target_coe_a = svca.Sound_velocity_coefficient_A2;
            smooth.target_coe_b = svca.Sound_velocity_coefficient_B2;
            smooth.alpha_a = (smooth.target_coe_a - svca.Sound_velocity_coefficient_A1)/2; 
            smooth.alpha_b = (smooth.target_coe_b - svca.Sound_velocity_coefficient_B1)/2;
            smooth.current_coe_a = (svca.Sound_velocity_coefficient_A2 - smooth.alpha_a ) + (segment_temp * smooth.alpha_a / SEGMENT);
            smooth.current_coe_b = (svca.Sound_velocity_coefficient_B2 - smooth.alpha_b ) + (segment_temp * smooth.alpha_b / SEGMENT);
        }else if(sound_after_filter >= scs.Sound_coe_scope_A2_B2_HL - CRITICAL){    
            segment_temp = find_segment(sound_after_filter/*value*/,scs.Sound_coe_scope_A2_B2_HL - CRITICAL/*start*/,scs.Sound_coe_scope_A2_B2_HL/*end*/,SEGMENT/*segment*/);   //eg 1350-1351
            smooth.target_coe_a = svca.Sound_velocity_coefficient_A3;
            smooth.target_coe_b = svca.Sound_velocity_coefficient_B3;
            smooth.alpha_a = (smooth.target_coe_a - svca.Sound_velocity_coefficient_A2)/2; 
            smooth.alpha_b = (smooth.target_coe_b - svca.Sound_velocity_coefficient_B2)/2;
            smooth.current_coe_a = svca.Sound_velocity_coefficient_A2 + ( segment_temp * smooth.alpha_a / SEGMENT);
            smooth.current_coe_b = svca.Sound_velocity_coefficient_B2 + ( segment_temp * smooth.alpha_b / SEGMENT);
        }else{
            smooth.current_coe_a = svca.Sound_velocity_coefficient_A2;
            smooth.current_coe_b = svca.Sound_velocity_coefficient_B2;
        }
    }else if((sound_after_filter > scs.Sound_coe_scope_A3_B3_LL) && (sound_after_filter <= scs.Sound_coe_scope_A3_B3_HL)){      //系数3应用
        if(sound_after_filter <= scs.Sound_coe_scope_A3_B3_LL + CRITICAL){  
            segment_temp = find_segment(sound_after_filter/*value*/,scs.Sound_coe_scope_A3_B3_LL/*start*/,scs.Sound_coe_scope_A3_B3_LL + CRITICAL/*end*/,SEGMENT/*segment*/);   //eg 1350-1351
            smooth.target_coe_a = svca.Sound_velocity_coefficient_A3;
            smooth.target_coe_b = svca.Sound_velocity_coefficient_B3;
            smooth.alpha_a = (smooth.target_coe_a - svca.Sound_velocity_coefficient_A2)/2; 
            smooth.alpha_b = (smooth.target_coe_b - svca.Sound_velocity_coefficient_B2)/2;
            smooth.current_coe_a = (svca.Sound_velocity_coefficient_A3 - smooth.alpha_a ) + ( segment_temp * smooth.alpha_a / SEGMENT);
            smooth.current_coe_b = (svca.Sound_velocity_coefficient_B3 - smooth.alpha_b ) + ( segment_temp * smooth.alpha_b / SEGMENT);
        }else{
            smooth.current_coe_a = svca.Sound_velocity_coefficient_A3;
            smooth.current_coe_b = svca.Sound_velocity_coefficient_B3;
        }
    }else{
        smooth.current_coe_a = 1;
        smooth.current_coe_b = 0;
    }
    /*更换系数后的声速值*/
    temp = smooth.current_coe_a * sound_after_filter + smooth.current_coe_b;    //ax+b
    return temp;
}
