==> jrpbsgq6wm-dot/hxb/SVP/源码/CubeSVP1500_bootloader/HARDWARE/TDC_GP22/tdc_gp22.c <==
#include "tdc_gp22.h"

void gp22_parameter_set(void)
{   
    //读取当前换能器挡板高度
    Source_distance = svp_cmd.PROBE_DISTANCE;
    outliers_threshold = svp_cmd.OUTLIERS_THRESHOLD;
    memcpy(&svca,&svp_cmd.SOUND_VELOCITY_COE_A1,sizeof(svca));
    memcpy(&scs,&svp_cmd.COE_2_SPOCE,sizeof(scs));
}

void TDC_GP22_Init(void){
    
    /*片选引脚配置*/
    GPIO_InitTypeDef GPIO_Initure;

    __HAL_RCC_GPIOA_CLK_ENABLE();           //使能GPIOA时钟
    __HAL_RCC_GPIOC_CLK_ENABLE();           //使能GPIOC时钟
    //NSS
    GPIO_Initure.Pin = GPIO_PIN_4;        
    GPIO_Initure.Mode = GPIO_MODE_OUTPUT_PP; //推挽输出
    GPIO_Initure.Pull = GPIO_PULLUP;        //上拉
    GPIO_Initure.Speed = GPIO_SPEED_HIGH;   //高速
    HAL_GPIO_Init(GPIOA, &GPIO_Initure);    //初始化
    //reset C5
    GPIO_Initure.Pin = GPIO_PIN_5;        
    GPIO_Initure.Mode = GPIO_MODE_OUTPUT_PP; //推挽输出
    GPIO_Initure.Pull = GPIO_PULLUP;        //上拉
    GPIO_Initure.Speed = GPIO_SPEED_HIGH;   //高速
    HAL_GPIO_Init(GPIOC, &GPIO_Initure);    //初始化
    
    TDC_GP22_CS = 1;
    /*SPI初始化*/
    SPI1_Init();
    /*外部中断初始化 - 待修改引脚*/
    EXTI_Init();
    /*寄存器配置 */   
    TDC_Init_Reg();
    /*参数设置*/
    gp22_parameter_set();
    /*晶振校准*/
    bytes_Cal =  calibrateResonator();
}

uint32_t read_tdc_frist_v(void){
    int16_t max_v = 35,temp;
    uint32_t reg4 = 0x20000004;
    first_v = svp_cmd.FRIST_WAVE_V;
    if(first_v > 35 || first_v <= 0){    //def
        first_v = 0x05;
        //STMFLASH_Write(FRIST_WAVE_VOLTAGE,(u16*)&first_v,1);
        return reg4 |= (first_v << 8);
    }
    
    if(first_v >= 20){                      //20+mv
        reg4 |= (0x01<<14);
        temp = max_v - first_v;
        if( temp == 15) //20mv
            return reg4;        
        reg4 |= ((0xf-temp)<<8);
        return reg4;
    }else if(first_v > 15 && first_v < 20){  //15-20mv
            //16 20-4 0101 1100
            //17 20-3 0101 1101
            //18 20-2 0101 1110
            //19 20-1 0101 1111
        switch(first_v){
            case 16:
                reg4 |= 0x5C << 8;
                break;
            case 17:
                reg4 |= 0x5D << 8;
                break;
            case 18:
                reg4 |= 0x5E << 8;
                break;
            case 19:
                reg4 |= 0x5F << 8;
                break;
        }
        return reg4;
    }else if(first_v >= 0 && first_v <= 15){    //0-15mv
        reg4 |= (first_v << 8);
        return reg4;
    }
    
    return reg4;
}

float sound_coe_handle(float sound_after_filter){
    float CRITICAL = 1.0f;  //距离声速范围边界临界值
    uint8_t SEGMENT = 100;  //临界点到范围边界的段数
    float temp,segment_temp;
    //printf("%f %f %f \r\n",sound_after_filter,scs.Sound_coe_scope_A1_B1_LL,scs.Sound_coe_scope_A1_B1_HL);
    if((sound_after_filter >= 0) && (sound_after_filter <= scs.Sound_coe_scope_1_2)){   //系数1应用
        if(sound_after_filter >= scs.Sound_coe_scope_1_2 - CRITICAL){  //如果当前声速需要切换声速范围上限前1米 就需要准备开始切换声速系数   
            segment_temp = find_segment(sound_after_filter/*value*/,scs.Sound_coe_scope_1_2 - CRITICAL/*start*/,scs.Sound_coe_scope_1_2/*end*/,SEGMENT/*segment*/);   //eg 1349-1350
            smooth.target_coe_a = svca.Sound_velocity_coefficient_A2;       //目标系数
            smooth.target_coe_b = svca.Sound_velocity_coefficient_B2;
            smooth.alpha_a = (smooth.target_coe_a - svca.Sound_velocity_coefficient_A1)/2;  //需要切换的系数差值
            smooth.alpha_b = (smooth.target_coe_b - svca.Sound_velocity_coefficient_B1)/2;
            smooth.current_coe_a = svca.Sound_velocity_coefficient_A1 + ( segment_temp * smooth.alpha_a / SEGMENT);
            smooth.current_coe_b = svca.Sound_velocity_coefficient_B1 + ( segment_temp * smooth.alpha_b / SEGMENT);
        }else{  //其他情况
            smooth.current_coe_a = svca.Sound_velocity_coefficient_A1;
            smooth.current_coe_b = svca.Sound_velocity_coefficient_B1;
        }
    }else if((sound_after_filter > scs.Sound_coe_scope_1_2) && (sound_after_filter <= scs.Sound_coe_scope_2_3)){      //系数2应用
        if(sound_after_filter <= scs.Sound_coe_scope_1_2 + CRITICAL){      
            segment_temp = find_segment(sound_after_filter/*value*/,scs.Sound_coe_scope_1_2/*start*/,scs.Sound_coe_scope_1_2 + CRITICAL/*end*/,SEGMENT/*segment*/);   //eg 1350-1351
            smooth.target_coe_a = svca.Sound_velocity_coefficient_A2;
            smooth.target_coe_b = svca.Sound_velocity_coefficient_B2;
            smooth.alpha_a = (smooth.target_coe_a - svca.Sound_velocity_coefficient_A1)/2; 
            smooth.alpha_b = (smooth.target_coe_b - svca.Sound_velocity_coefficient_B1)/2;
            smooth.current_coe_a = (svca.Sound_velocity_coefficient_A2 - smooth.alpha_a ) + (segment_temp * smooth.alpha_a / SEGMENT);
            smooth.current_coe_b = (svca.Sound_velocity_coefficient_B2 - smooth.alpha_b ) + (segment_temp * smooth.alpha_b / SEGMENT);
        }else if(sound_after_filter >= scs.Sound_coe_scope_2_3 - CRITICAL){    
            segment_temp = find_segment(sound_after_filter/*value*/,scs.Sound_coe_scope_2_3 - CRITICAL - CRITICAL/*start*/,scs.Sound_coe_scope_2_3/*end*/,SEGMENT/*segment*/);   //eg 1350-1351
            smooth.target_coe_a = svca.Sound_velocity_coefficient_A3;
            smooth.target_coe_b = svca.Sound_velocity_coefficient_B3;
            smooth.alpha_a = (smooth.target_coe_a - svca.Sound_velocity_coefficient_A2)/2; 
            smooth.alpha_b = (smooth.target_coe_b - svca.Sound_velocity_coefficient_B2)/2;
            smooth.current_coe_a = svca.Sound_velocity_coefficient_A2 + ( segment_temp * smooth.alpha_a / SEGMENT);
            smooth.current_coe_b = svca.Sound_velocity_coefficient_B2 + ( segment_temp * smooth.alpha_b / SEGMENT);
        }else{
            smooth.current_coe_a = svca.Sound_velocity_coefficient_A2;
            smooth.current_coe_b = svca.Sound_velocity_coefficient_B2;
        }
    }else if((sound_after_filter > scs.Sound_coe_scope_2_3) && (sound_after_filter <= 1600)){      //系数3应用
        if(sound_after_filter <= scs.Sound_coe_scope_2_3 + CRITICAL){  
            segment_temp = find_segment(sound_after_filter/*value*/,scs.Sound_coe_scope_2_3/*start*/,scs.Sound_coe_scope_2_3 + CRITICAL/*end*/,SEGMENT/*segment*/);   //eg 1350-1351
            smooth.target_coe_a = svca.Sound_velocity_coefficient_A3;
            smooth.target_coe_b = svca.Sound_velocity_coefficient_B3;
            smooth.alpha_a = (smooth.target_coe_a - svca.Sound_velocity_coefficient_A2)/2; 
            smooth.alpha_b = (smooth.target_coe_b - svca.Sound_velocity_coefficient_B2)/2;
            smooth.current_coe_a = (svca.Sound_velocity_coefficient_A3 - smooth.alpha_a ) + ( segment_temp * smooth.alpha_a / SEGMENT);
            smooth.current_coe_b = (svca.Sound_velocity_coefficient_B3 - smooth.alpha_b ) + ( segment_temp * smooth.alpha_b / SEGMENT);
        }else{
            smooth.current_coe_a = svca.Sound_velocity_coefficient_A3;
            smooth.current_coe_b = svca.Sound_velocity_coefficient_B3;
        }
    }else{
        smooth.current_coe_a = 1;
        smooth.current_coe_b = 0;
    }
    /*更换系数后的声速值*/
    temp = 1 * sound_after_filter + 0;    //ax+b
    //printf("%f %f %f %f\r\n",sound_after_filter,smooth.current_coe_a,smooth.current_coe_b,temp);
    return temp;
}
